Fix stretched clan icons

--- a/components/VoiceList/VoiceList.module.css
+++ b/components/VoiceList/VoiceList.module.css
@@ -3,6 +3,7 @@
   display: grid;
   height: 100%;
   justify-content: center;
+  justify-items: center;
   text-align: center;
   margin: 0;
 }
